Fix header and paragraph sizes/visibilities for smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,11 @@ img.sprite {
     padding-top: 5px;
 }
 
+.small-details {
+    font-size: 1.8rem;
+    line-height: 0.5;
+}
+
 #inventory-button {
     border: none;
     border-radius: 0px;
@@ -155,19 +160,23 @@ img.sprite {
     }
 
     h1 {
-        font-size: 3rem;
+        font-size: 4rem;
     }
 
     h2 {
         font-size: 2.5rem;
     }
     
-    .starter .details {
+    /* .starter .details {
         display: none;
-    }
+    } */
 }
 
 @media (max-width: 395px) {
+
+    h1 {
+        font-size: 3rem;
+    }
 
     h2, h3 {
         font-size: 2.2rem;
@@ -180,7 +189,8 @@ img.sprite {
 
 @media (max-width: 359px) {
 
-    h2, h3 {
+    h2 {
         font-size: 1.8rem;
-    }   
+    }
+
 }
